main content grid layout complete not responsive

--- a/index.html
+++ b/index.html
@@ -115,8 +115,11 @@
         </div>
       </div>
       <div class="main">
+        <h3 id="project-h3">Your Projects</h3>
+        <h3 id="announce-h3">Announcements</h3>
+        <h3 id="trending-h3">Trending</h3>
+
         <div class="projects">
-          <h4>Your Projects</h4>
           <div class="card">
             <h5>Super Cool Project</h5>
             <p>
@@ -129,16 +132,19 @@
               src="Admin Dashboard Icons/star-icon.png"
               alt="star icon"
               class="card-icon"
+              id="icon-1"
             />
             <img
               src="Admin Dashboard Icons/seen-icon.png"
               alt="seen icon"
               class="card-icon"
+              id="icon-2"
             />
             <img
               src="Admin Dashboard Icons/share-icon.png"
               alt="share icon"
               class="card-icon"
+              id="icon-3"
             />
           </div>
           <div class="card">
@@ -153,16 +159,19 @@
               src="Admin Dashboard Icons/star-icon.png"
               alt="star icon"
               class="card-icon"
+              id="icon-1"
             />
             <img
               src="Admin Dashboard Icons/seen-icon.png"
               alt="seen icon"
               class="card-icon"
+              id="icon-2"
             />
             <img
               src="Admin Dashboard Icons/share-icon.png"
               alt="share icon"
               class="card-icon"
+              id="icon-3"
             />
           </div>
           <div class="card">
@@ -177,16 +186,19 @@
               src="Admin Dashboard Icons/star-icon.png"
               alt="star icon"
               class="card-icon"
+              id="icon-1"
             />
             <img
               src="Admin Dashboard Icons/seen-icon.png"
               alt="seen icon"
               class="card-icon"
+              id="icon-2"
             />
             <img
               src="Admin Dashboard Icons/share-icon.png"
               alt="share icon"
               class="card-icon"
+              id="icon-3"
             />
           </div>
           <div class="card">
@@ -201,16 +213,19 @@
               src="Admin Dashboard Icons/star-icon.png"
               alt="star icon"
               class="card-icon"
+              id="icon-1"
             />
             <img
               src="Admin Dashboard Icons/seen-icon.png"
               alt="seen icon"
               class="card-icon"
+              id="icon-2"
             />
             <img
               src="Admin Dashboard Icons/share-icon.png"
               alt="share icon"
               class="card-icon"
+              id="icon-3"
             />
           </div>
           <div class="card">
@@ -225,16 +240,19 @@
               src="Admin Dashboard Icons/star-icon.png"
               alt="star icon"
               class="card-icon"
+              id="icon-1"
             />
             <img
               src="Admin Dashboard Icons/seen-icon.png"
               alt="seen icon"
               class="card-icon"
+              id="icon-2"
             />
             <img
               src="Admin Dashboard Icons/share-icon.png"
               alt="share icon"
               class="card-icon"
+              id="icon-3"
             />
           </div>
           <div class="card">
@@ -249,69 +267,77 @@
               src="Admin Dashboard Icons/star-icon.png"
               alt="star icon"
               class="card-icon"
+              id="icon-1"
             />
             <img
               src="Admin Dashboard Icons/seen-icon.png"
               alt="seen icon"
               class="card-icon"
+              id="icon-2"
             />
             <img
               src="Admin Dashboard Icons/share-icon.png"
               alt="share icon"
               class="card-icon"
+              id="icon-3"
             />
           </div>
         </div>
+
         <div class="announcements">
-          <h4>Announcements</h4>
           <div class="announcement-card">
-            <div>
-              <h6>Site Maintenance</h6>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
-                rem est quidem, corrupti nihil debitis ipsa unde quam hic quae
-                pariatur cumque sunt perferendis esse perspiciatis voluptatem
-                earum recusandae excepturi.
-              </p>
-            </div>
-            <div>
-              <h6>Community Share Day</h6>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
-                rem est quidem, corrupti nihil debitis ipsa unde quam hic quae
-                pariatur cumque sunt perferendis esse perspiciatis voluptatem
-                earum recusandae excepturi.
-              </p>
-            </div>
-            <div>
-              <h6>Updated Privacy Policy</h6>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
-                rem est quidem, corrupti nihil debitis ipsa unde quam hic quae
-                pariatur cumque sunt perferendis esse perspiciatis voluptatem
-                earum recusandae excepturi.
-              </p>
-            </div>
+            <h6>Site Maintenance</h6>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+              rem est quidem, corrupti nihil debitis ipsa unde quam hic quae
+              pariatur cumque sunt perferendis esse perspiciatis voluptatem
+              earum recusandae excepturi.
+            </p>
+          </div>
+          <hr class="style-one" />
+          <div class="announcement-card">
+            <h6>Community Share Day</h6>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+              rem est quidem, corrupti nihil debitis ipsa unde quam hic quae
+              pariatur cumque sunt perferendis esse perspiciatis voluptatem
+              earum recusandae excepturi.
+            </p>
+          </div>
+          <hr class="style-one" />
+          <div class="announcement-card">
+            <h6>Updated Privacy Policy</h6>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+              rem est quidem, corrupti nihil debitis ipsa unde quam hic quae
+              pariatur cumque sunt perferendis esse perspiciatis voluptatem
+              earum recusandae excepturi.
+            </p>
           </div>
         </div>
         <div class="trending">
-          <h4>Trending</h4>
           <div class="trending-card">
             <img src="user-image-2.jpeg" alt="user-image 2" class="user-icon" />
             <div>
               <h5>@tegan</h5>
               <p>World Peace Builder</p>
             </div>
+          </div>
+          <div class="trending-card">
             <img src="user-image-1.jpeg" alt="user-image 1" class="user-icon" />
             <div>
               <h5>@kaori</h5>
               <p>Super Cool Project</p>
             </div>
+          </div>
+          <div class="trending-card">
             <img src="user-image-3.jpeg" alt="user-image 3" class="user-icon" />
             <div>
               <h5>@kendall</h5>
               <p>Life Changing App</p>
             </div>
+          </div>
+          <div class="trending-card">
             <img src="user-image-4.jpeg" alt="user-image 4" class="user-icon" />
             <div>
               <h5>@alex</h5>
